# bmp-reader

./: .gitignore  CMakeLists.txt  ReadMe.md  main.cpp
include/bmp/reader/: BMPReader.hpp
include/bmp/structs/: Structs.hpp
include/bmpreader/reader/: BMPReader.hpp
include/bmpreader/structs/: Structs.hpp
src/: BMPReader.cpp  Structs.cpp
